<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Quiz1">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:text="@string/kitxva1"
        android:textSize="28sp"
        android:padding="20dp"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:text="@string/a_quiz1"
        android:textSize="25sp"
        android:padding="10dp"
        android:layout_marginTop="160dp"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:text="@string/b_quiz1"
        android:textSize="25sp"
        android:padding="10dp"
        android:layout_marginTop="250dp"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/c_quiz1"
        android:textSize="25sp"
        android:padding="10dp"
        android:layout_marginTop="370dp"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:text="@string/d_quiz1"
        android:textSize="25sp"
        android:padding="10dp"
        android:layout_marginTop="450dp"
        android:textColor="@color/black"
        />





</FrameLayout>