<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign_up"
    >

    <TextView
        android:id="@+id/text_title"
        style="@style/Widget.Material3.MaterialTimePicker.Display.HelperText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/Sing_up"
        android:textColor="#000000"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ed_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/for_inserts"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="@+id/text_title"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/text_title"
        app:layout_constraintTop_toBottomOf="@+id/text_title" />

    <EditText
        android:id="@+id/ed_mail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/for_inserts"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="@+id/ed_name"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/ed_name"
        app:layout_constraintTop_toBottomOf="@+id/ed_name" />

    <EditText
        android:id="@+id/ed_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/for_inserts"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="@+id/ed_mail"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/ed_mail"
        app:layout_constraintTop_toBottomOf="@+id/ed_mail" />

    <EditText
        android:id="@+id/ed_phone"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/for_inserts"
        android:ems="10"
        android:hint="@string/Phone_num"
        android:inputType="phone"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="@+id/ed_pass"
        app:layout_constraintStart_toStartOf="@+id/ed_pass"
        app:layout_constraintTop_toBottomOf="@+id/ed_pass" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/register"
        android:text="@string/Register"
        android:textColor="@color/spitak"
        app:layout_constraintEnd_toEndOf="@+id/ed_phone"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/ed_phone"
        app:layout_constraintTop_toBottomOf="@+id/ed_phone" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_login"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/register"
        android:text="@string/Log_in"
        android:textColor="@color/spitak"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/bt_reg"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/bt_reg"
        app:layout_constraintTop_toBottomOf="@+id/bt_reg" />

</androidx.constraintlayout.widget.ConstraintLayout>