<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile"
    >

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_update_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="600dp"
        android:background="@drawable/register"
        android:text="@string/update_password"
        android:textColor="@color/spitak"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_sign_out"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/register"
        android:text="@string/sign_out"
        android:textColor="@color/spitak"
        app:layout_constraintEnd_toEndOf="@+id/bt_update_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/bt_update_password"
        app:layout_constraintTop_toBottomOf="@+id/bt_update_password" />

    <ImageView
        android:id="@+id/quiz_foto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-220dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_start_quiz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/quiz" />

    <TextView
        android:id="@+id/Infoquiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="132dp"
        android:lineSpacingExtra="9dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/infoquiz"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_update_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_start_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Infoquiz" />
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/btNavView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav"
        />

</androidx.constraintlayout.widget.ConstraintLayout>